--- a/CSS/style2.css
+++ b/CSS/style2.css
@@ -40,10 +40,11 @@ h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;}
 /*-------------------------------------------------------------------------------------------------*/
 body {
 	font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+	max-width: 100%;
 }
 header {
-	background:url('../Image/Other/Billy.png') 720px 150px/510px no-repeat, url('../Image/Other/Macbook.png') 700px 130px/550px no-repeat, url('../Image/Other/Background3.jpg') no-repeat;
-	padding:0 0 50px 0;
+	background: url('../Image/Other/Background3.jpg') 0 0/100% auto no-repeat;
+	padding:0 0 10px 0;
 	color: white;
 	position: relative;
 }
@@ -70,6 +71,7 @@ header {
   display: flex;
   margin: 0 auto;
   justify-content: space-between;
+  flex-wrap: wrap;
 }
 .high-panel__row a {
 	color: white;
@@ -97,26 +99,27 @@ color: white;
 	font-weight: 700;
 }
 .slider__body {
-	display: flex;
-	flex-direction: column;
+	
 }
 .slider__row {
 	flex: 1 1 auto;
-	padding: 0 0 120px 0;
+	padding: 0 0 0 0;
+	display: flex;
+	
 }
 .text {
 	font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-	font-size: 20px;
+	font-size: 18px;
 	line-height: 30px;
 }
 .slider__text p {
 	margin: 0 0 40px 0;
-    width: 600px;
+    max-width: 560px;
 }
 .slider__btn a {
 	background-color: aqua;
 	font-size: 20px;
-	width: 140px;
+	max-width: 140px;
 	border-radius: 5px;
 	padding: 15px 15px;
 	text-align: center;
@@ -125,10 +128,23 @@ color: white;
 .slider__btn a:hover {
 	background-color: rgb(30, 170, 170);
 }
+.slider__img {
+	/* position: relative; */
+	
+}
+.slider__img img {
+	/* position: absolute;
+	top: -277px;
+	left: 570px; */
+	margin: -55px 0 -42px 0;
+}
+
 .slider__minibuttons {
 	display: flex;
 	justify-content: center;
-	margin: 10px 0 0 -30px;
+	margin: 10px 0 -10px -70px;
+	padding: 0 0 20px 0;
+	
 }
 .slider__minibuttons a {
 	display:block;
@@ -162,7 +178,7 @@ color: white;
 	text-align: center;
 	margin: 0 0 0 295px;
 	font-size: 16px;
-	width: 680px;
+	width: 58%;
 	line-height: 25px;
 }
 .why__icons {
@@ -172,7 +188,7 @@ color: white;
 	justify-content: center;
 }
 .why__icons a {
-   margin: 0 15px;
+   margin: 0 15px 15px 15px;
 }
 .why__icons a:nth-child(5) {
 	display: flex;
@@ -194,6 +210,7 @@ color: white;
 }
 .why__columns {
 	display: flex;
+	flex-wrap: wrap;
 	justify-content: center;
 }
 .why__img {
@@ -209,7 +226,7 @@ color: white;
 }
 .why__description {
 	font-size: 15px;
-	width: 310px;
+	max-width: 310px;
 	text-align: center;
 	color: gray;
 	line-height: 20px;
@@ -218,6 +235,7 @@ color: white;
 /*--------------------------------------------------------------------------------------------*/
 .reviews {
 	background: #40babd url('../Image/Other/map.png') no-repeat center center;
+	max-width: 100%;
 	padding: 90px 0 70px 0;
 	-webkit-background-size: cover;
   -moz-background-size: cover;
@@ -236,6 +254,7 @@ color: white;
 .reviews__columns {}
 .reviews__column {
 	display: flex;
+	flex-wrap: wrap;
 	justify-content: center;
 	padding: 30px 0;
 }
@@ -248,10 +267,11 @@ color: white;
 	border: 1px;
 	border-radius: 5px;
 	position: relative;
-	width: 600px;
+	max-width: 600px;
 	padding: 20px;
 	background: rgba(23, 129, 120, 0.5);
 	z-index: 2;
+	margin: 0 20px;
 }
 .review__cloud p {
 	color: white;
@@ -310,6 +330,7 @@ color: white;
 }
 .features__row {
 	display: flex;
+	flex-wrap: wrap;
 }
 .features__img {
 	margin: 0 80px 0 -10px;
@@ -348,6 +369,7 @@ color: white;
 	font-size: 15px;
 	line-height: 20px;
 	display: flex;
+	flex-wrap: wrap;
 	flex-direction: column;
 }
 .ourteam__label {
@@ -356,12 +378,13 @@ color: white;
 
 }
 .ourteam__text {
-	width: 760px;
+	width: 65%; 
 	align-self: center;
 	padding: 0 0 70px 0;
 }
 .ourteam__row {
 	display: flex;
+	flex-wrap: wrap;
 	justify-content: center;
 }
 .ourteam__column {
@@ -393,7 +416,7 @@ color: white;
 .ourteam__career {
 	color: rgb(59, 59, 59);
 	margin: 10px 0 0 0;
-	width: 297px;
+	max-width: 297px; 
 }
 .ourteam__career a {
 	color: #40babd;
@@ -424,6 +447,7 @@ color: white;
 }
 .pricing__row {
 	display: flex;
+	flex-wrap: wrap;
 	justify-content: center;
 }
 /*-----------------------------------------column-#1-----------------------------------------*/
@@ -432,9 +456,10 @@ color: white;
 	color: white;
 	padding: 20px;
 	border-radius: 10px;
-	width: 300px;
+	width: 25.5%;
 	margin: 0 15px;
 	display: flex;
+	flex-wrap: wrap;
 	flex-direction: column;
 }
 .pricing__application {
@@ -456,7 +481,7 @@ color: white;
 	left: 90px;
 }
 .pricing__description {
-	width: 200px;
+	width: 70%;
 	text-align: center;
 	margin: 0 auto;
 	padding: 20px 0;
@@ -473,7 +498,7 @@ color: white;
 .pricing__btn {
 	background-color: rgba(45, 112, 45, 0.5);
 	font-size: 20px;
-	width: 140px;
+	width: 46%;
 	border-radius: 5px;
 	padding: 15px 15px;
 	text-align: center;
@@ -489,9 +514,10 @@ color: white;
 	color: white;
 	padding: 20px;
 	border-radius: 10px;
-	width: 300px;
+	width: 25.5%;
 	margin: 0 15px;
 	display: flex;
+	flex-wrap: wrap;
 	flex-direction: column;
 }
 .pricing__price {
@@ -518,7 +544,7 @@ color: white;
 .pricing__btn__even {
 	background-color: rgba(45, 102, 112, 0.5);
 	font-size: 20px;
-	width: 140px;
+	width: 46%;
 	border-radius: 5px;
 	padding: 15px 15px;
 	text-align: center;
@@ -534,9 +560,10 @@ color: white;
 	color: white;
 	padding: 20px;
 	border-radius: 10px;
-	width: 300px;
+	width: 25.5%;
 	margin: 0 15px;
 	display: flex;
+	flex-wrap:wrap;
 	flex-direction: column;
 }
 .pricing__price__uneven {
@@ -563,7 +590,7 @@ color: white;
 .pricing__btn__uneven {
 	background-color: rgba(112, 89, 45, 0.5);
 	font-size: 20px;
-	width: 140px;
+	width: 43%; 
 	border-radius: 5px;
 	padding: 15px 15px;
 	text-align: center;
@@ -595,13 +622,13 @@ color: white;
 .contact__text {
 	color: white;
     padding: 20px 0 60px 0;
-	width: 580px;
+	width: 50%;
 	margin: 0 auto;
 }
 .contact__btn {
 	background-color: #40babd;
 	font-size: 17px;
-	width: 160px;
+	width: 11%;
 	border-radius: 5px;
 	padding: 13px 1px;
 	text-align: center;
@@ -630,3 +657,212 @@ color: white;
 	text-decoration: underline;
 }
 /*-------------------------------------------------------------------------------------------*/
+@media (max-width:1230px) {
+	.container {
+		max-width: 1170px;
+		margin: 0 auto;
+	}
+	main {
+		display: flex;
+		flex-direction: column;
+		flex-wrap: wrap;
+	}
+	.slider__img img {
+		height: 400px;
+		padding: 0 0 80px 0;
+	}	
+}
+@media (max-width:1055px) {
+	.container {
+		max-width: 750px;
+		margin: 0 auto;
+	}
+	main {
+		display: flex;
+		flex-direction: column;
+		flex-wrap: wrap;
+	}
+	.slider__img img:last-child {
+		height: 400px;
+	}
+	.slider__text p {
+		margin: 0 0 40px 0;
+		width: 350px;
+		padding: 0 -500px 0 0;
+	}
+    .high-panel__item a {
+		margin: 0 auto;
+	}
+	.why__text {
+		margin: 0 0 0 10px ;
+		width: 200px;
+	}
+	.reviews__column {
+		display: flex;
+		flex-wrap: none;
+		flex-direction: column;
+
+		justify-content: center;
+		padding: 30px 0;
+	}
+	.reverse {
+		flex-direction: column-reverse;
+	}
+	.reviews__icon {
+		padding: 0 20px 0 20px;
+		margin: 0 0 20px 0;
+	}
+	.reviews__icon::after {
+		content:'';
+		border: 10px solid transparent;
+		border-bottom-color: rgba(23, 129, 120, 0.5);
+		position:relative;
+		margin: 0;
+		left:-50px;
+		top:75px;
+		
+		z-index:2;
+	}
+	.review__cloud:before {
+		
+		
+		position: absolute;
+		left: 0;
+		bottom: 0;
+		content:'';
+		border:none;
+	}
+	.right:before {
+		border: 10px solid transparent;
+		
+		position: absolute;
+		left: 0;
+		bottom: 0;
+		content:'';
+		border-right-color: none;	
+	}
+	.features__img {
+		margin: 0 80px 0 -10px;
+		height: 500px;
+	}
+	.features__img img {
+		width:100%;
+	}
+}
+@media (max-width:850px) {
+	body {
+		max-width: 100%;
+		
+	}
+	.container {
+		max-width: 700;
+		margin: 0 auto;
+	}
+	header {
+		background: url('../Image/Other/Background3.jpg') 0 0/cover no-repeat;
+		padding: 0 0 20px 0;
+	}
+	.high-panel {
+		padding: 20px 0 0 20px;
+	}
+	.slider__img img:last-child {
+		height: 300px;
+		margin: 35px 0 -42px 0;
+		padding: -410px 0 0 0;
+	}
+	main {
+		display: block;
+		text-align: center;
+		margin: 0 auto;
+	}
+	.slider__row {
+		display: flex;
+		flex-direction: column;
+		flex: 1 1 33.333%;
+	}
+	.slider__text p {
+		min-width: 100%;
+	}
+	.slider__minibuttons {
+		display: flex;
+		justify-content: center;
+		margin: 0 0 0 -50px;
+		padding: -50px 0 20px 0;
+	}
+	.why__text {
+	color: gray;
+	text-align: center;
+	margin: 0 auto;
+	font-size: 16px;
+	width: 87%;
+	line-height: 25px;
+    }
+	.why__title {
+		font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+		text-align: center;
+		font-weight:100;
+		color:rgb(51, 51, 51);
+		margin: 0 auto;
+		padding: 0 0 10px 0;
+	}
+	.why__icons {
+		text-align: center;
+		margin: 70px 0 120px 10px;
+		display: flex;
+		justify-content: center;
+		flex-wrap: wrap;
+	}
+	.review__cloud:before {
+		border: 10px solid transparent;
+		border-right-color: rgba(23, 129, 120, 0.5);
+		position: absolute;
+		bottom: 100%;
+		left: -200px;
+		bottom: 90px;
+		content:'';
+	}
+	.right:before {
+		border: none;
+		position: absolute;
+		left: 600px;
+		bottom: 90px;
+		content:'';
+		border-right-color: none;	
+	}
+	.up:before {
+		position: absolute;
+		bottom: 70px;
+	}
+	.pricing__row {
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+	}
+	.pricing__column {
+		background-color: rgb(92, 182, 92);
+		color: white;
+		padding: 20px;
+		border-radius: 10px;
+		width: 70%;
+		margin: 10px 15%;
+	}
+	.pricing__column__even {
+		width: 70%;
+		margin: 10px 15%;
+	}
+	.pricing__column__uneven {
+		width: 70%;
+		margin: 10px 15%;
+	}
+	.contact__btn {
+		background-color: #40babd;
+		font-size: 17px;
+		width: 36%;
+		border-radius: 5px;
+		padding: 13px 1px;
+		text-align: center;
+		color: white;
+		margin: 0 auto;
+		font-weight: 700;
+	}
+}
